--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/Lato/Lato-Regular.ttf');
+}
+@font-face {
+  font-family: 'Lato-Bold';
+  src: url('assets/Lato/Lato-Bold.ttf');
+}
+@font-face {
+  font-family: 'Lato-Italic';
+  src: url('assets/Lato/Lato-Italic.ttf');
+}
