--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="parent-container"><div class="container">
-  <h1 class="text-header">Welcome to The Location</h1>
+  <h1 class="text-header">Welcome to The XELO</h1>
   <div class="sub-title">A Safer Way for Families to Stay in Touch</div>
   <div class="explain marginize"><span class="title">Children control their location sharing : </span>  They can choose to share their location in real-time, set specific times for sharing, or designate certain zones where their location is automatically visible.</div>
   <div class="explain"><span class="title">Open communication is key : </span> Parents and children can use the app to chat and send messages, ensuring everyone is on the same page and building trust.</div>
